@@ -6,6 +6,7 @@ import com.coggiri.main.jwtUtils.JwtTokenProvider;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -19,6 +20,7 @@ import org.springframework.security.web.servlet.util.matcher.MvcRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.servlet.handler.HandlerMappingIntrospector;
 
+import java.util.Arrays;
 import java.util.List;
 
 @RequiredArgsConstructor
@@ -28,6 +30,10 @@ public class WebSecurityConfig {
     private UserService userService;
     private PasswordEncoder passwordEncoder;
     private final JwtTokenProvider jwtTokenProvider;
+
+    @Value("${springdoc.ip}")
+    private String serverIp;
+
     @Autowired
     WebSecurityConfig(UserService userService, PasswordEncoder passwordEncoder, JwtTokenProvider jwtTokenProvider){
         this.userService = userService;
@@ -45,8 +51,10 @@ public class WebSecurityConfig {
                                 .requestMatchers("/resources/**", "/static/**", "/css/**").permitAll()
                                 .requestMatchers(
                                         "/swagger-ui/**",
+                                        "/swagger-ui.html",
                                         "/swagger-resources/**",
-                                        "/v3/api-docs/**"
+                                        "/v3/api-docs/**",
+                                        "/webjars/**"
                                 ).hasAnyAuthority("ROLE_SUPER_ADMIN_GROUP_0")
                                 .requestMatchers("/api/user/**").permitAll()
                                 .requestMatchers("/api/validate/**").permitAll()
@@ -56,9 +64,17 @@ public class WebSecurityConfig {
                 .cors(corsCustomizer -> corsCustomizer
                         .configurationSource(request -> {
                             var cors = new CorsConfiguration();
-                            cors.setAllowedOrigins(List.of("*"));
-                            cors.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-                            cors.setAllowedHeaders(List.of("*"));
+                            cors.setAllowedOrigins(Arrays.asList(serverIp));
+                            cors.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                            cors.setAllowedHeaders(Arrays.asList(
+                                    "Authorization",
+                                    "Content-Type",
+                                    "X-Requested-With",
+                                    "Accept",
+                                    "Origin"
+                            ));
+                            cors.setAllowCredentials(true);
+                            cors.setMaxAge(3600L);
                             return cors;
                         }))
                 .sessionManagement(session -> session
